--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <title>What? Worms?</title>
+  
+  <body>
+      <blockquote class="imgur-embed-pub" lang="en" data-id="a/moCaZ"><a href="//imgur.com/moCaZ"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+  </body>
+  
+  <style>
+    body {
+      background-color:yellow;
+    }
+  </style>
+  
+</html>
