--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>What? Worms?</title>
   
   <body>
-      <blockquote class="imgur-embed-pub" lang="en" data-id="a/moCaZ"><a href="//imgur.com/moCaZ"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+      <img src="https://i.imgur.com/4dH3E6v.gif" />
   </body>
   
   <style>
