--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>What? Worms?</title>
   
   <body>
-      <img src="https://i.imgur.com/4dH3E6v.gif" />
+      <img src="Worms.gif" />
   </body>
   
   <style>
