--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   
   <body>
       <img src="Worms.gif" />
+    
+    <p> 
+      <a href = "wormz.html">YES!!!</a>
+      <a href = "pain.html">No?</a>
+    </p>
   </body>
   
   <style>
