--- a/wormz.html
+++ b/wormz.html
@@ -1,1 +1,19 @@
-
+<html>
+  <title>Worms!</title>
+  
+  <body>
+      <img src="Worms.gif" />
+    
+    <p> 
+      <a href = "wormz.html">YES!!!</a>
+      <a href = "pain.html">No?</a>
+    </p>
+  </body>
+  
+  <style>
+    body {
+      background-color:yellow;
+    }
+  </style>
+  
+</html>
