--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <body>
       <img src="Worms.gif" />
     
-    <p> 
-      <a href = "wormz.html">YES!!!</a>
-      <a href = "pain.html">No?</a>
-    </p>
+      <h1><a href = "wormz.html">YES!!!</a></h1>
+      <h1><a href = "pain.html">No?</a></h1>
+    
   </body>
   
   <style>
