--- a/wormz.html
+++ b/wormz.html
@@ -2,7 +2,7 @@
   <title>Worms!</title>
   
   <body>
-      <img src="Worms.gif" />
+      <img src="Wurmy.gif" />
     
     <p> 
       <a href = "wormz.html">YES!!!</a>
