--- a/wormz.html
+++ b/wormz.html
@@ -2,7 +2,7 @@ n<html>
   <title>Worms!</title>
   
   <body>
-      <img src="Wurmy.gif" />
+      <img src="Wurmy.gif" img src="Wurmy.gif" img src="Wurmy.gif" img src="Wurmy.gif"/>
     
     <p> 
       <a href = "wormz.html">YES!!!</a>
