--- a/wormz.html
+++ b/wormz.html
@@ -2,7 +2,7 @@ n<html>
   <title>Worms!</title>
   
   <body>
-      <img src="Wurmy.gif" img src="Wurmy.gif" img src="Wurmy.gif" img src="Wurmy.gif"/>
+      <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
     
     <p> 
       <a href = "wormz.html">YES!!!</a>
