--- a/wormz.html
+++ b/wormz.html
@@ -66,6 +66,8 @@ n<html>
     <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
     <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
     <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
+    <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
+    <img src="Wurmy.gif" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"/>
   </body>
   
   <style>
