--- a/wormz.html
+++ b/wormz.html
@@ -2,6 +2,10 @@ n<html>
   <title>Worms!</title>
   
   <body>
+    <audio controls autoplay>
+      <source src="Running in the 90s.mp3" type="audio/mpeg">
+    </audio> 
+    
     <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
     <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
     <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
