--- a/wormz.html
+++ b/wormz.html
@@ -2,7 +2,7 @@ n<html>
   <title>Worms!</title>
   
   <body>
-    <audio controls autoplay>
+    <audio autoplay loop>
       <source src="Running in the 90s.mp3" type="audio/mpeg">
     </audio> 
     
