--- a/pain.html
+++ b/pain.html
@@ -1,1 +1,19 @@
-
+<html>
+  <title>Worms!</title>
+  
+  <body>
+    <audio autoplay loop>
+      <source src="Running in the 90s.mp3" type="audio/mpeg">
+    </audio> 
+    
+    <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
+    
+  </body>
+  
+  <style>
+    body {
+      background-color:green;
+    }
+  </style>
+  
+</html>
