--- a/pain.html
+++ b/pain.html
@@ -3,7 +3,7 @@
   
   <body>
     <audio autoplay loop>
-      <source src="Running in the 90s.mp3" type="audio/mpeg">
+      <source src="Sonic CD (USA) Music Boss.mp3" type="audio/mpeg">
     </audio> 
     
     <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
