--- a/pain.html
+++ b/pain.html
@@ -6,13 +6,13 @@
       <source src="Sonic CD (USA) Music Boss.mp3" type="audio/mpeg">
     </audio> 
     
-    <img src="Wurmy.gif" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"/>
+    <img src="God.png" style="float: left; width: 100%; margin-right: 1%; margin-bottom: 0.5em;"/>
     
   </body>
   
   <style>
     body {
-      background-color:green;
+      background-color:#23F7F8;
     }
   </style>
   
