--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <title>What? Worms?</title>
   
   <body>
+      <audio autoplay loop>
+        <source src="Running in the 90s.mp3" type="audio/mpeg">
+      </audio>
       <img src="Worms.gif" />
     
       <h1><a href = "wormz.html">YES!!!</a></h1>
